# utm_campus_chatbot

./: .env.example  .gitignore  README.md  admin_manual_simple.md  ai_service.py  app.py  flask_app.py  forms.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  routes.py  setup_deepseek.py  user_manual_simple.md
attached_assets/: group5A1_1750495139340.docx  group5A2_1750495139339.docx  group5A3_1750495139339.docx
docs/: api_reference.rst  conf.py  configuration.rst  facility_management.rst  index.rst  installation.rst  user_management.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/admin-dashboard/: index.doctree
docs/_build/doctrees/ai-service/: index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  admin_guide.html  api_reference.html  configuration.html  facility_management.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  troubleshooting.html  user_management.html
docs/_static/: custom.css
docs/changelog/: index.rst
docs/facility-management/: index.rst
docs/first-setup/: index.rst
docs/troubleshooting/: index.rst
instance/: schema.sql  utm_campus.db
static/css/: style.css
static/js/: chatbot.js
templates/: admin_dashboard.html  base.html  book_facility.html  chatbot.html  directions.html  facility_info.html  facility_schedule.html  index.html  login.html  manage_bookings.html  my_bookings.html  register.html  report_issue.html  student_dashboard.html  update_booking.html  view_issue.html
(+61 files in other folders)
