[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pyjwt>=2.10.1",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "openai>=1.90.0",
    "flask-bcrypt>=1.0.1",
    "wtforms[email]>=3.2.1",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "psycopg2-binary>=2.9.10",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.1",
]
